--- a/_posts/2018-12-11-post-02-Git.md
+++ b/_posts/2018-12-11-post-02-Git.md
@@ -10,9 +10,8 @@ author: "Shadow"
 * 用apt-get安装  
     `$ sudo apt-get install git`
 ### 在Mac上安装
-
-&emsp;&emsp;打开[ http://git-scm.com/download/mac](http://git-scm.com/download/mac) 下载并安装
+&emsp;&emsp;打开<a href="http://git-scm.com/download/mac" target="_blank">http://git-scm.com/download/mac</a>下载并安装
 
 
 ### 在Window上安装
-&emsp;&emsp;打开[http://windows.github.com](http://windows.github.com) 下载并安装
+&emsp;&emsp;打开<a href="http://windows.github.com" target="_blank">http://windows.github.com</a>下载并安装
