--- a/_posts/2018-12-18-post-04-Git.md
+++ b/_posts/2018-12-18-post-04-Git.md
@@ -5,4 +5,5 @@ author: "Shadow"
 ---
 
 # 图片
-![.git目录](https://github.com/ShadowsGtt/ShadowsGtt.github.io/mydata/image/gitfile.png ".git目录")
+![.git目录](https://github.com/ShadowsGtt/ShadowsGtt.github.io/blob/master/mydata/image/gitfile.png ".git目录")
+![目录](/mydata/image/gitfile.png ".git目录")
