--- a/_posts/2018-12-18-post-04-Git.md
+++ b/_posts/2018-12-18-post-04-Git.md
@@ -4,6 +4,7 @@ search: false
 author: "Shadow"
 ---
 
-# 图片
+# 图片1 url
 ![.git目录](https://github.com/ShadowsGtt/ShadowsGtt.github.io/blob/master/mydata/image/gitfile.png ".git目录")
-![目录](/mydata/image/gitfile.png ".git目录")
+# 图片2 绝对地址
+![目录](/mydata/image/gitfile.png "目录")
