--- a/_posts/2018-12-18-post-04-Git.md
+++ b/_posts/2018-12-18-post-04-Git.md
@@ -17,19 +17,19 @@ author: "Shadow"
 ### **COMMIT_DITMSG**  
 &emsp;&emsp;保存了上一次COMMIT的描述信息,仅供我们自己参考，Git不会用到它。
 让我们通过`cat COMMIT_EDITMSG` 来看一下文件内容  
-![COMMIT_EDITMSG](/mydata/image/COMMIT_EDITMSG " ")  
+![COMMIT_EDITMSG](/mydata/image/COMMIT_EDITMSG.png "Commit_msg")  
 &emsp;&emsp;结果确实是我们上一次COMMIT的描述信息
 
 ### **HEAD**  
 &emsp;&emsp;一个引用，指向当前工作的分支,通过`cat HEAD`来看一下里面的内容  
-![HEAD](/mydata/image/HEAD "")  
+![HEAD](/mydata/image/HEAD.png "HEAD")  
 &emsp;&emsp;说明我们当前工作在master分支下  
 
 
 ### **config**  
 &emsp;&emsp;保存了Git仓库的配置信息，直接通过`cat config`命令查看文件内容
 和使用`git config --list`都可以看到Git的配置信息.  
-![config文件内容](/mydata/image/config " ")  
+![config文件内容](/mydata/image/config.png "config")  
 
 ### **decription**  
 &emsp;&emsp;保存了Git仓库的描述信息，你可以编辑这个文件内容。  
@@ -44,6 +44,6 @@ author: "Shadow"
 当我们在工作区中进行了任意的操作之后git都会向这个文件中输入操作信息，当我们利用git status查询的时候，就会用index来和版
 本库中的最新版本进行比较，以此确定哪些文件是什么状态.  
 ***附上Git文件的四种状态****  
-![Git文件的四种状态](/mydata/image/filestatus " ")  
+![Git文件的四种状态](/mydata/image/filestatus.png "STATUS")  
 
 
