add Website to learn Git

--- a/_posts/2018-12-18-post-04-Git.md
+++ b/_posts/2018-12-18-post-04-Git.md
@@ -45,5 +45,16 @@ author: "Shadow"
 本库中的最新版本进行比较，以此确定哪些文件是什么状态.  
 ***附上Git文件的四种状态****  
 ![Git文件的四种状态](/mydata/image/filestatus.png "STATUS")  
+对于这四种文件的状态日后再做解释  
 
+
+### **info**  
+
+### **logs**  
+
+### **objects**  
+
+### **packed-refs**  
+
+### **refs**  
 
